button & transition delay changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
         </li>
       </div>
     </div>
-    <h1 class="text-center py-3 para">Software Aided Technology</h1>
+    <div class="container para">
+      <h1 class="text-center py-3 ">Software Aided Technology</h1>
+      <h6>SAT 9 is created with vision to ease of Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsa iure qui corporis adipisci tempore quos, animi commodi, pariatur, sed perspiciatis! Voluptatem aut iste enim ratione architecto, neque dolores illo?</h6>
+    </div>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
