sat9 project card & background image changes

--- a/index.html
+++ b/index.html
@@ -13,62 +13,176 @@
     <title>Sat9</title>
   </head>
   <body>
-    <div class="circular pt-4">
-      <div class="menu">
-        <div class="toggle">
-          <h4>SAT9</h4>
+    <div class="container-fluid background-img">
+      <h1 class="text-center py-3">Software Aided Technology</h1>
+      <h6 class="text-center" style="margin-bottom: 100px">
+        SAT 9 is created with vision to ease of Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Officiis ipsa iure qui corporis adipisci
+        tempore quos, animi commodi, pariatur, sed perspiciatis! Voluptatem aut
+        iste enim ratione architecto, neque dolores illo?
+      </h6>
+      <div class="row gy-5">
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <div class="lines"></div>
+            <img
+              src="./images/contract.png"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">CQR</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-8">
+                  <h5 class="card-title">Contract QR</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://cqr.sat9.in/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
+                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
+                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
+                quas eius, minima atque recusandae.
+              </p>
+            </div>
+          </div>
         </div>
-        <li style="--i: 0">
-          <a href="#">CBDP</a>
-        </li>
-        <li style="--i: 1">
-          <a href="#">Contract QR</a>
-        </li>
-        <li style="--i: 2">
-          <a href="#"><ion-icon name="planet-outline"></ion-icon></a>
-        </li>
-        <li style="--i: 3">
-          <a href="#"><ion-icon name="planet-outline"></ion-icon></a>
-        </li>
-        <li style="--i: 4">
-          <a href="#"><ion-icon name="planet-outline"></ion-icon></a>
-        </li>
-        <li style="--i: 5">
-          <a href="#"><ion-icon name="planet-outline"></ion-icon></a>
-        </li>
-        <li style="--i: 6">
-          <a href="#"><ion-icon name="planet-outline"></ion-icon></a>
-        </li>
-        <li style="--i: 7">
-          <a href="#"><ion-icon name="planet-outline"></ion-icon></a>
-        </li>
-        <li style="--i: 8">
-          <a href="#"><ion-icon name="planet-outline"></ion-icon></a>
-        </li>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <div class="lines"></div>
+            <img
+              src="./images/cbdp1.png"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">CBDP</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-10">
+                  <h5 class="card-title">Cloud Based Document Portal</h5>
+                </div>
+                <div class="col-1">
+                  <a
+                    href="https://cbdp.sat9.in/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
+                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
+                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
+                quas eius, minima atque recusandae.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <div class="lines"></div>
+            <img
+              src="./images/ghf.png"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">GHF</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Giving Hope Foundation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://ghf-1.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
+                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
+                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
+                quas eius, minima atque recusandae.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <div class="lines"></div>
+            <img
+              src="./images/ghf.png"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">GHF</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Giving Hope Foundation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://ghf-1.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
+                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
+                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
+                quas eius, minima atque recusandae.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="container para">
-      <h1 class="text-center py-3 ">Software Aided Technology</h1>
-      <h6>SAT 9 is created with vision to ease of Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsa iure qui corporis adipisci tempore quos, animi commodi, pariatur, sed perspiciatis! Voluptatem aut iste enim ratione architecto, neque dolores illo?</h6>
-    </div>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-    <script>
-      let toggle = document.querySelector(".toggle");
-      let menu = document.querySelector(".menu");
-      let para = document.querySelector(".para");
-      let circular = document.querySelector(".circular");
-      toggle.onclick = function () {
-        menu.classList.toggle("active");
-        para.classList.toggle("active");
-        circular.classList.toggle("active");
-      };
-    </script>
   </body>
 </html>
