changes in website & project  description

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <body>
     <div class="container-fluid background-img">
       <h1 class="text-center py-3">Software Aided Technology</h1>
-      <h6 class="text-center" style="margin-bottom: 100px">
-        SAT 9 is created with vision to ease of Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Officiis ipsa iure qui corporis adipisci
-        tempore quos, animi commodi, pariatur, sed perspiciatis! Voluptatem aut
-        iste enim ratione architecto, neque dolores illo?
-      </h6>
+      <h5 class="text-center" style="margin-bottom: 50px">
+        SAT 9 is created with vision to providing cutting-edge solutions to
+        real-world problems. Our goal is to create intelligent and sophisticated
+        systems that can learn from and interact with their environment, and
+        help the businesses to stay competitive in today's rapidly evolving
+        digital landscape.
+      </h5>
       <div class="row gy-5">
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
@@ -54,10 +55,11 @@
                 </div>
               </div>
               <p class="card-text text-info my-1">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
-                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
-                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
-                quas eius, minima atque recusandae.
+                Contract-QR is MERN stack web app, used by Express Pesticides
+                Pvt Ltd to create a pest control contract and service cards for
+                clients. Each service card has unique QR code, which helps
+                service operator to quickly & easily update the status after the
+                service.
               </p>
             </div>
           </div>
@@ -94,10 +96,51 @@
                 </div>
               </div>
               <p class="card-text text-info my-1">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
-                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
-                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
-                quas eius, minima atque recusandae.
+                CBDP is Cloud Based Documents Portal is MERN app. It is used by
+                Express Pesticides Pvt Ltd for sending MSDS, TC & SOP documents
+                of various pest services to clients with inbuilt emailing
+                function. Also has Upskill section to provide training and
+                information videos to operators.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <div class="lines"></div>
+            <img
+              src="./images/ghf.png"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">GHF</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Giving Hope Foundation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://ghf-1.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">
+                GHF is registered trust working unbiasedly, focusing to deliver hope
+                to all endeavors leading to improve sustainability and quality
+                of life. To bring together technology, individuals, and teams
+                who work within their circle of knowledge.
               </p>
             </div>
           </div>
@@ -142,45 +185,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="projects-card">
-            <div class="lines"></div>
-            <img
-              src="./images/ghf.png"
-              class="card-img-top"
-              alt="project-img"
-              style="height: 200"
-            />
-            <div class="card-body text-center">
-              <div class="card-title">GHF</div>
-            </div>
-            <div class="projects-modal">
-              <div class="row mt-2">
-                <div class="col-9">
-                  <h5 class="card-title">Giving Hope Foundation</h5>
-                </div>
-                <div class="col-2">
-                  <a
-                    href="https://ghf-1.netlify.app/"
-                    target="_blank"
-                    rel="noreferrer"
-                  >
-                    <img
-                      src="./images/chrome.png"
-                      alt="internet"
-                      style="height: 30"
-                    />
-                  </a>
-                </div>
-              </div>
-              <p class="card-text text-info my-1">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
-                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
-                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
-                quas eius, minima atque recusandae.
-              </p>
-            </div>
-          </div>
+      </div>
+      <div class="row text-center footer">
+        <div class="col-6 footer-copywright">
+          <h6>© SAT9</h6>
+        </div>
+        <div class="col-6 footer-copywright-1">
+          <h6>All Rights Reserved</h6>
         </div>
       </div>
     </div>
