--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="container-fluid background-img">
-      <h1 class="text-center py-3">Software Aided Technology</h1>
-      <h5 class="text-center" style="margin-bottom: 50px">
+      <h1 class="text-center py-3 grad">Software Aided Technology</h1>
+      <h5 class="text-center description" style="margin-bottom: 50px; padding: 0px 90px">
         SAT 9 is created with vision to providing cutting-edge solutions to
         real-world problems. Our goal is to create intelligent and sophisticated
         systems that can learn from and interact with their environment, and
@@ -25,7 +25,6 @@
       <div class="row gy-5">
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
-            <div class="lines"></div>
             <img
               src="./images/contract.png"
               class="card-img-top"
@@ -55,18 +54,16 @@
                 </div>
               </div>
               <p class="card-text text-info my-1">
-                Contract-QR is MERN stack web app, used by Express Pesticides
-                Pvt Ltd to create a pest control contract and service cards for
-                clients. Each service card has unique QR code, which helps
-                service operator to quickly & easily update the status after the
-                service.
+                Contract-QR is MERN stack web app, used by EPCORN to create a
+                pest control contract and service cards for clients. Each
+                service card has unique QR code, which helps service operator to
+                quickly & easily update the status after the service.
               </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
-            <div class="lines"></div>
             <img
               src="./images/cbdp1.png"
               class="card-img-top"
@@ -97,17 +94,16 @@
               </div>
               <p class="card-text text-info my-1">
                 CBDP is Cloud Based Documents Portal is MERN app. It is used by
-                Express Pesticides Pvt Ltd for sending MSDS, TC & SOP documents
-                of various pest services to clients with inbuilt emailing
-                function. Also has Upskill section to provide training and
-                information videos to operators.
+                EPCORN for sending MSDS, TC & SOP documents of various pest
+                services to clients with inbuilt emailing function. Also has
+                Upskill section to provide training and information videos to
+                operators.
               </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
-            <div class="lines"></div>
             <img
               src="./images/ghf.png"
               class="card-img-top"
@@ -137,34 +133,33 @@
                 </div>
               </div>
               <p class="card-text text-info my-1">
-                GHF is registered trust working unbiasedly, focusing to deliver hope
-                to all endeavors leading to improve sustainability and quality
-                of life. To bring together technology, individuals, and teams
-                who work within their circle of knowledge.
+                GHF is registered trust working unbiasedly, focusing to deliver
+                hope to all endeavors leading to improve sustainability and
+                quality of life. To bring together technology, individuals, and
+                teams who work within their circle of knowledge.
               </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
-            <div class="lines"></div>
             <img
-              src="./images/ghf.png"
+              src="./images/feedback.png"
               class="card-img-top"
               alt="project-img"
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">GHF</div>
+              <div class="card-title">Feedback</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">Giving Hope Foundation</h5>
+                  <h5 class="card-title">Feedback</h5>
                 </div>
                 <div class="col-2">
                   <a
-                    href="https://ghf-1.netlify.app/"
+                    href="https://eppl-feedback.netlify.app/"
                     target="_blank"
                     rel="noreferrer"
                   >
@@ -176,12 +171,7 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
-                suscipit eaque libero deserunt sed quae, sunt ea consequuntur
-                ipsum illum officiis delectus, necessitatibus dignissimos ipsa
-                quas eius, minima atque recusandae.
-              </p>
+              <p class="card-text text-info my-1">Feedback form of EPCORN.</p>
             </div>
           </div>
         </div>
