project card style changes

--- a/index.html
+++ b/index.html
@@ -175,6 +175,176 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <img
+              src="./images/work1.jpg"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">Contract Quotation</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Contract Quotation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://eppl-feedback.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">Work in progress</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <img
+              src="./images/work.jpg"
+              class="card-img-top "
+              alt="project-img"
+              
+            />
+            <div class="card-body text-center">
+              <div class="card-title">SAI</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">SAI</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://eppl-feedback.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">Work in progress</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <img
+              src="./images/work1.jpg"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">Contract Quotation</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Contract Quotation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://eppl-feedback.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">Work in progress</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <img
+              src="./images/work.jpg"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">Contract Quotation</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Contract Quotation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://eppl-feedback.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">Work in progress</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <img
+              src="./images/work1.jpg"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">Contract Quotation</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Contract Quotation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://eppl-feedback.netlify.app/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">Work in progress</p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="row text-center footer">
         <div class="col-6 footer-copywright">
