ICO image & new ongoing project added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+     <link rel="m icon" href="/images/rocket.png">
     <title>Sat9</title>
   </head>
   <body>
@@ -252,12 +253,12 @@
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">Contract Quotation</div>
+              <div class="card-title">Report Generation</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">Contract Quotation</h5>
+                  <h5 class="card-title">Report Generation</h5>
                 </div>
                 <div class="col-2">
                   <a
