sat9 web description & project desc changes

--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-     <link rel="m icon" href="/images/rocket.png">
+    <link rel="m icon" href="/images/rocket.png" />
     <title>Sat9</title>
   </head>
   <body>
     <div class="container-fluid background-img">
       <h1 class="text-center py-3 grad">Software Aided Technology</h1>
-      <h5 class="text-center description" style="margin-bottom: 50px; padding: 0px 90px">
-        SAT 9 is created with vision to providing cutting-edge solutions to
-        real-world problems. Our goal is to create intelligent and sophisticated
-        systems that can learn from and interact with their environment, and
-        help the businesses to stay competitive in today's rapidly evolving
-        digital landscape.
+      <h5
+        class="text-center description"
+        style="margin-bottom: 50px; padding: 0px 90px"
+      >
+        SAT 9 is created with a vision to become a leading solution providing
+        platform which builds products to improve customer experience and allows
+        businesses to use new technology platforms to solving real-world
+        problems. Our goal is to create intelligent and sophisticated systems
+        that can learn from and interact within the given Eco-system and
+        environment, and assist businesses to stay competitive in today's
+        rapidly evolving digital landscape.
       </h5>
       <div class="row gy-5">
         <div class="col-lg-4 col-md-6">
@@ -94,11 +99,12 @@
                 </div>
               </div>
               <p class="card-text text-info my-1">
-                CBDP is Cloud Based Documents Portal is MERN app. It is used by
-                EPCORN for sending MSDS, TC & SOP documents of various pest
-                services to clients with inbuilt emailing function. Also has
-                Upskill section to provide training and information videos to
-                operators.
+                CBDP is Cloud Based Document repository Portal, developed by
+                EPCORN for quicker and easier access of documents needed by
+                teams and customers, like MSDS, TC & SOP documents of various
+                pest services having an inbuilt emailing function. We have added
+                “UPSKILL” a section to provide quick glimpse providing training
+                and information videos to stake holders.
               </p>
             </div>
           </div>
@@ -214,9 +220,8 @@
           <div class="projects-card">
             <img
               src="./images/work.jpg"
-              class="card-img-top "
+              class="card-img-top"
               alt="project-img"
-              
             />
             <div class="card-body text-center">
               <div class="card-title">SAI</div>
