report project card changes

--- a/index.html
+++ b/index.html
@@ -185,22 +185,22 @@
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
             <img
-              src="./images/work1.jpg"
+              src="./images/report.png"
               class="card-img-top"
               alt="project-img"
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">Contract Quotation</div>
+              <div class="card-title">Reports Generation</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">Contract Quotation</h5>
+                  <h5 class="card-title">Reports Generation</h5>
                 </div>
                 <div class="col-2">
                   <a
-                    href="https://eppl-feedback.netlify.app/"
+                    href="https://www.report.sat9.in/dashboard"
                     target="_blank"
                     rel="noreferrer"
                   >
@@ -212,7 +212,13 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">Work in progress</p>
+              <p class="card-text text-info my-1">
+                Reports Generation portal is used to crate RIM/Work
+                Done/Inspection and many report automatically. Here user has to
+                select predefined template and upload images with appropriate
+                comments. And back office person will get the generated file, which
+                he/she can edit/send to client with in-build email functionality.
+              </p>
             </div>
           </div>
         </div>
@@ -292,12 +298,12 @@
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">Contract Quotation</div>
+              <div class="card-title">Hotels Dashboard</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">Contract Quotation</h5>
+                  <h5 class="card-title">Hotels Dashboard</h5>
                 </div>
                 <div class="col-2">
                   <a
