--- a/index.html
+++ b/index.html
@@ -112,6 +112,47 @@
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
             <img
+              src="./images/report.png"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">Reports Generation</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Reports Generation</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://www.report.sat9.in/dashboard"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">
+                Reports Generation portal is used to crate RIM/Work
+                Done/Inspection and many report automatically. Here user has to
+                select predefined template and upload images with appropriate
+                comments. And back office person will get the generated file,
+                which he/she can edit/send to client with in-build email
+                functionality.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <img
               src="./images/ghf.png"
               class="card-img-top"
               alt="project-img"
@@ -127,7 +168,7 @@
                 </div>
                 <div class="col-2">
                   <a
-                    href="https://ghf-1.netlify.app/"
+                    href="https://ghf.sat9.in/"
                     target="_blank"
                     rel="noreferrer"
                   >
@@ -178,46 +219,16 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">Feedback form of EPCORN.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="projects-card">
-            <img
-              src="./images/report.png"
-              class="card-img-top"
-              alt="project-img"
-              style="height: 200"
-            />
-            <div class="card-body text-center">
-              <div class="card-title">Reports Generation</div>
-            </div>
-            <div class="projects-modal">
-              <div class="row mt-2">
-                <div class="col-9">
-                  <h5 class="card-title">Reports Generation</h5>
-                </div>
-                <div class="col-2">
-                  <a
-                    href="https://www.report.sat9.in/dashboard"
-                    target="_blank"
-                    rel="noreferrer"
-                  >
-                    <img
-                      src="./images/chrome.png"
-                      alt="internet"
-                      style="height: 30"
-                    />
-                  </a>
-                </div>
-              </div>
               <p class="card-text text-info my-1">
-                Reports Generation portal is used to crate RIM/Work
-                Done/Inspection and many report automatically. Here user has to
-                select predefined template and upload images with appropriate
-                comments. And back office person will get the generated file, which
-                he/she can edit/send to client with in-build email functionality.
+                At EPCORN we consider feedback a vital part of business growth
+                as it empowers our clients to guide us in areas of service
+                solutions and client satisfaction. It equally brings us to
+                knowing how to correct ourselves and equally allows us to engage
+                with our customers who take time out to let us know how to do
+                better because we strongly believe that every customer who takes
+                time to provide us the feedback believes in our teams
+                capabilities and commitment towards ensuring our customers have
+                a pest free living..
               </p>
             </div>
           </div>
@@ -235,7 +246,7 @@
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">SAI</h5>
+                  <h5 class="card-title">System Assisted Intelligence</h5>
                 </div>
                 <div class="col-2">
                   <a
@@ -251,7 +262,19 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">Work in progress</p>
+              <p class="card-text text-info my-1">
+                At EPCORN our core value of ensuring we provide the best and
+                dependable services without compromising on chemicals and safety
+                is prime. To ensure we at a team always have the right approach
+                developed SAI, to embolden the decision taking of our teams in
+                handling pests and deploying right strategy and chemicals for
+                the various pest problems in experienced by our teams. Our aim
+                was to pool in data over the years to provide the right past
+                reference fitting into the algorithm so as to blend in
+                artificial intelligence and predictive guidance based on known
+                parameters needed for decision taking in the pest control
+                industry.
+              </p>
             </div>
           </div>
         </div>
